<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainDashboardFragment">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="411dp"
        android:layout_height="351dp"
        android:contentDescription="@string/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/bg2"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="412dp"
        android:layout_height="338dp"
        android:contentDescription="@string/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/bg2"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="411dp"
        android:layout_height="343dp"
        android:contentDescription="@string/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg2"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card1"
        android:layout_width="370dp"
        android:layout_height="683dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="612dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="295dp"
                android:layout_height="103dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="36dp"
                android:contentDescription="@string/pmc_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo2"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="29dp"
                android:layout_height="34dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_outline_settings_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/searchByDB"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:layout_marginTop="68dp"
                android:background="@drawable/rounded_button"
                android:text="@string/search_by_disease"
                android:textColor="#FFFFFF"
                app:backgroundTint="#003F51"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/searchBySB"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_button"
                android:text="@string/search_by_symptoms"
                android:textColor="#FFFFFF"
                app:backgroundTint="#003E4F"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchByDB" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView"
                android:layout_width="291dp"
                android:layout_height="82dp"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="40dp"
                android:text="@string/symptom_and_disease_checker"
                android:textAlignment="center"
                android:textColor="#004053"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView4"
                android:layout_width="293dp"
                android:layout_height="37dp"
                android:layout_marginTop="16dp"
                android:text="@string/identify_possible"
                android:textAlignment="center"
                android:textColor="#00838F"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>